--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -6,13 +6,13 @@
           "type": "php",
           "request": "launch",
           "port": 9000,
+          "url": "http://localhost:8888/rasadi/wp-admin/", 
       },
       {
           "name": "Launch Chrome",
           "type": "chrome",
           "request": "launch",
-          "url": "http://localhost:8888/rasadi/wp-admin/post.php?post=1936013&action=edit", 
-
+          "url": "http://localhost:8888/rasadi/wp-admin/", 
       }
   ]
 }
